...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEEEF"
    tools:context=".ui.neighbour_list.DetailNeighbourActivity"
    android:id="@+id/detail_neighbour_activity">
    <ImageView
        android:id="@+id/neighbour_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:tint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#ffffff"
        android:clickable="true"
...
